nearly completed - few alignments to fix

--- a/lesson 5_more-projects/nutrition-facts-label/style.css
+++ b/lesson 5_more-projects/nutrition-facts-label/style.css
@@ -8,6 +8,7 @@ body {
   border-color: black;
   border-width: 2px;
   font-family: sans-serif;
+  font-size: 28px;
 }
 
 article {
@@ -115,8 +116,44 @@ td dt {
   font-weight: normal;
 }
 
+td.indent {
+  text-indent: 60px;
+}
+
+
 tr td:last-of-type {
   font-weight: 600;
   text-align: right;
   font-size: 26px;
+}
+
+tbody + tbody tr:first-of-type td {
+    border-top: 15px solid #000000;
+}
+
+tfoot td:last-of-type {
+  font-size: 26px;
+  font-weight: normal;
+  text-align: left;
+  padding-top: 5px;
+  border-top: 1px solid #000000;
+}
+
+
+/* Bottom table */
+
+table + table th {
+  border-bottom: 1px solid #000000;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+table + table td {
+  font-size: 20px;
+  border: none;
+}
+
+table + table tr td:last-of-type {
+  font-size: 20px;
+  font-weight: normal;
 }
